--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/router": "~7.2.0",
     "angularfire2": "^5.1.2",
     "core-js": "^2.5.4",
+    "echarts": "^4.2.1",
     "firebase": "^5.9.4",
+    "ngx-echarts": "^4.1.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
@@ -32,9 +34,10 @@
     "@angular/cli": "~7.3.8",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
-    "@types/node": "~8.9.4",
+    "@types/echarts": "^4.1.8",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
